<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1"
    tools:context=".ProductDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_shade_1"
        app:title="Żywność"
        app:titleTextColor="@color/yellow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_above="@id/idBtnReadProduct"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/idIVPic"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="3dp"
                android:padding="3dp"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/idTVName"
                android:layout_below="@id/idIVPic"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp"
                android:padding="4dp"
                android:layout_margin="4dp"
                />

            <TextView
                android:id="@+id/idTVQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVName"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:text="@string/quantity"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/idTVPackaging"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVQuantity"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:text="@string/packaging"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/idTVBrands"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVPackaging"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:text="@string/packaging"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/idTVCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVBrands"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:text="@string/categories"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/idTVLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVCategories"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:text="@string/labels"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/idTVStores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVLabels"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:text="@string/stores"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/idTVCountries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVStores"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:text="@string/countries"
                android:textColor="@color/white" />

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/idBtnReadProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/yellow"
        android:text="@string/read_full_product"
        android:textAllCaps="false"
        app:backgroundTint="@color/yellow" />

</RelativeLayout>